@@ -299,6 +299,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 155
     END
+
+    IDD_DLG_PWHIST, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 266
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 146
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -572,10 +580,10 @@ BEGIN
                     WS_VISIBLE,7,200,270,1
     CONTROL         "Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,11,267,34,10
-    LTEXT           "last passwords",IDC_STATIC_OLDPW1,72,267,52,10
-    EDITTEXT        IDC_MAXPWHISTORY,46,265,17,14,ES_NUMBER
+    LTEXT           "last passwords",IDC_STATIC_OLDPW1,76,267,52,10
+    EDITTEXT        IDC_MAXPWHISTORY,46,265,18,14,ES_NUMBER
     CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT | 
-                    UDS_ARROWKEYS | UDS_HOTTRACK,60,265,10,14,
+                    UDS_ARROWKEYS | UDS_HOTTRACK,63,265,10,14,
                     WS_EX_CLIENTEDGE
     GROUPBOX        "Advanced",IDC_STATIC_DTEXPGROUP,7,238,261,45
     CONTROL         "",IDC_BOTTOM_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
@@ -609,7 +617,7 @@ BEGIN
     LTEXT           "Notes:",IDC_STATIC,6,115,22,8
     EDITTEXT        IDC_NOTES,52,114,152,74,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "&Password History",IDC_PWHIST,211,133,61,14,
+    PUSHBUTTON      "&Password History",IDC_PWHIST,211,136,61,14,
                     BS_MULTILINE
     PUSHBUTTON      "&More >>",IDC_MORE,210,174,64,14
     DEFPUSHBUTTON   "OK",IDOK,210,33,64,14
@@ -640,10 +648,10 @@ BEGIN
     EDITTEXT        IDC_LTIME,104,301,106,10,ES_READONLY | NOT WS_BORDER
     CONTROL         "",IDC_BOTTOM_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,14,322,251,1
-    LTEXT           "Status:",IDC_STATIC,221,148,23,8
-    CTEXT           "On",IDC_PWHSTATUS,246,148,16,8
-    LTEXT           "Max:",IDC_STATIC,228,159,16,8
-    CTEXT           "255",IDC_PWHMAX,246,159,16,8
+    LTEXT           "Status:",IDC_STATIC,221,151,23,8
+    CTEXT           "On",IDC_PWHSTATUS,246,151,16,8
+    LTEXT           "Max:",IDC_STATIC,228,161,16,8
+    CTEXT           "255",IDC_PWHMAX,246,161,16,8
     GROUPBOX        "",IDC_STATIC,208,127,68,44
 END
 
@@ -1064,6 +1072,24 @@ BEGIN
                     IDC_STATIC,21,127,232,9,SS_CENTERIMAGE
 END
 
+IDD_DLG_PWHIST DIALOGEX 0, 0, 273, 153
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Password History"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    PUSHBUTTON      "Close",IDOK,112,132,50,14
+    CONTROL         "Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,15,11,30,10
+    CONTROL         "last passwords",IDC_STATIC_OLDPW1,"Static",SS_SIMPLE | 
+                    WS_GROUP,77,11,52,10
+    EDITTEXT        IDC_MAXPWHISTORY,45,9,18,14,ES_NUMBER
+    CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT | 
+                    UDS_ARROWKEYS | UDS_HOTTRACK,62,9,10,14,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_PWHISTORY_LIST,"SysListView32",LVS_REPORT | 
+                    LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,26,259,79
+    PUSHBUTTON      "Clear History",IDC_CLEAR_PWHIST,7,109,50,14
+    PUSHBUTTON      "Copy All",IDC_PWH_COPY_ALL,216,108,50,14
+END
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1349,65 +1375,6 @@ END
 
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
-
-
-/////////////////////////////////////////////////////////////////////////////
-// Hebrew resources
-
-#if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_HEB)
-#ifdef _WIN32
-LANGUAGE LANG_HEBREW, SUBLANG_DEFAULT
-#pragma code_page(1255)
-#endif //_WIN32
-
-/////////////////////////////////////////////////////////////////////////////
-//
-// DESIGNINFO
-//
-
-#ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO 
-BEGIN
-    IDD_DLG_PWHIST, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 266
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 146
-    END
-END
-#endif    // APSTUDIO_INVOKED
-
-
-/////////////////////////////////////////////////////////////////////////////
-//
-// Dialog
-//
-
-IDD_DLG_PWHIST DIALOGEX 0, 0, 273, 153
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
-CAPTION "Password History"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
-BEGIN
-    PUSHBUTTON      "Close",IDOK,112,132,50,14
-    CONTROL         "Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,15,11,30,10
-    CONTROL         "last passwords",IDC_STATIC_OLDPW1,"Static",SS_SIMPLE | 
-                    WS_GROUP,79,11,52,10
-    EDITTEXT        IDC_MAXPWHISTORY,48,9,17,14,ES_NUMBER
-    CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT | 
-                    UDS_ARROWKEYS | UDS_HOTTRACK,64,9,10,14,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_PWHISTORY_LIST,"SysListView32",LVS_REPORT | 
-                    LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,26,259,79
-    PUSHBUTTON      "Clear History",IDC_CLEAR_PWHIST,7,109,50,14
-    PUSHBUTTON      "Copy All",IDC_PWH_COPY_ALL,216,108,50,14
-END
-
-#endif    // Hebrew resources
-/////////////////////////////////////////////////////////////////////////////
-
-
 
 #ifndef APSTUDIO_INVOKED
 /////////////////////////////////////////////////////////////////////////////
